2 button links added

--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
 
     <p>Pour nous envoyer des photos, veuillez cliquer sur le bouton ci-dessous à gauche. Pour voir les photos déjà envoyées, choisissez le bouton à droite.</p>
 
-    <a href="#" class="button">Envoyer mes photos</a>
-    <a href="#" class="button">Voir les photos</a>
+    <a href="https://192-168-1-43.tai-alex.direct.quickconnect.to:5001/mo/request/pTVbCJdHL" class="button">Envoyer mes photos</a>
+    <a href="https://192-168-1-43.tai-alex.direct.quickconnect.to:5001/mo/sharing/XMAk1KLVY" class="button">Voir les photos</a>
 </body>
 </html>
