--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
 
     <p> Saviez-vous que nous faisons une vidéo de ses meilleurs moments avec sa famille et ses amis ? Oui, et pour y arriver, nous avons besoin de votre aide pour récolter un maximum de photos de lui. Des moments de joie, de bonheur, de bêtise, d'émotion, tout ! </p>
 
-    <p>Pour nous envoyer des photos, veuillez cliquer sur le bouton ci-dessous à gauche. Pour voir les photos déjà envoyées, choisissez le bouton à droite.</p>
+    <p>Pour nous envoyer des photos, ou voir les photos déjà envoyées, veuillez cliquer sur les bouton ci-dessous.</p>
 
     <a href="https://192-168-1-43.tai-alex.direct.quickconnect.to:5001/mo/request/pTVbCJdHL" class="button">Envoyer mes photos</a>
     <a href="https://192-168-1-43.tai-alex.direct.quickconnect.to:5001/mo/sharing/XMAk1KLVY" class="button">Voir les photos</a>
