Update Synology Photos links

--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
 
     <p>Pour nous envoyer des photos, ou voir les photos déjà envoyées, veuillez cliquer sur les bouton ci-dessous.</p>
 
-    <a href="https://192-168-1-43.tai-alex.direct.quickconnect.to:5001/mo/request/pTVbCJdHL" class="button">Envoyer mes photos</a>
-    <a href="https://192-168-1-43.tai-alex.direct.quickconnect.to:5001/mo/sharing/XMAk1KLVY" class="button">Voir les photos</a>
+    <a href="https://alex-tai-23.quickconnect.to/mo/request/THFfttxJz" class="button">Envoyer mes photos</a>
+    <a href="https://alex-tai-23.quickconnect.to/mo/sharing/TykxutKUF" class="button">Voir les photos</a>
 </body>
 </html>
